{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 278,
  "lineage": "c358a8eb-8809-9c92-0e4f-d61b5dfc2c5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:390665570631:route-table/rtb-076aedcfe23ed98ed",
            "default_route_table_id": "rtb-076aedcfe23ed98ed",
            "id": "rtb-076aedcfe23ed98ed",
            "owner_id": "390665570631",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b885f9e0f5e34a08",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcf1fe43c6101f83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061cf30a139d73d7a",
            "arn": "arn:aws:ec2:eu-west-1:390665570631:instance/i-0d32953ac009448ac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-ec2-instance-profile",
            "id": "i-0d32953ac009448ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkinsKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaa19cc53fd017dd",
            "private_dns": "ip-10-0-0-43.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.43",
            "public_ip": "46.137.41.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1bdafeea4c2ddc3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098feaac32e12b82b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7c52fed6a3f18ca",
            "tags": {
              "Name": "dev-jenkins-server"
            },
            "tags_all": {
              "Name": "dev-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098feaac32e12b82b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_iam_role",
            "aws_key_pair.generated",
            "aws_security_group.jenkins_security_group",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux_2",
            "data.external.myipaddr",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:390665570631:internet-gateway/igw-0b885f9e0f5e34a08",
            "id": "igw-0b885f9e0f5e34a08",
            "owner_id": "390665570631",
            "tags": {
              "Name": "dev-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-internet-gateway"
            },
            "vpc_id": "vpc-0fcf1fe43c6101f83"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:390665570631:security-group/sg-098feaac32e12b82b",
            "description": "Apply to Jenkins EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098feaac32e12b82b",
            "ingress": [
              {
                "cidr_blocks": [
                  "93.21.138.198/32"
                ],
                "description": "Allow SSH from MY Public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "93.21.138.198/32"
                ],
                "description": "Allow access to Jenkis from My IP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dev-jenkins-security-group",
            "name_prefix": "",
            "owner_id": "390665570631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-jenkins-security-group"
            },
            "tags_all": {
              "Name": "dev-jenkins-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcf1fe43c6101f83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.external.myipaddr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:390665570631:subnet/subnet-0e7c52fed6a3f18ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7c52fed6a3f18ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390665570631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet"
            },
            "tags_all": {
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-0fcf1fe43c6101f83"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:390665570631:vpc/vpc-0fcf1fe43c6101f83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0016d46d0ece286c1",
            "default_route_table_id": "rtb-076aedcfe23ed98ed",
            "default_security_group_id": "sg-0cd92380b49bc0d3f",
            "dhcp_options_id": "dopt-08b4172496eb99da4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcf1fe43c6101f83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076aedcfe23ed98ed",
            "owner_id": "390665570631",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}